Assuming main branches for hydrant and meshflow

--- a/prerequisits/requirements.txt
+++ b/prerequisits/requirements.txt
@@ -45,7 +45,7 @@ fonttools==4.29.1
 funcsigs==1.0.2
 GDAL==3.5.1
 geopandas==0.14.0
-hydrant @ git+https://github.com/kasra-keshavarz/hydrant.git@bff3a4f96285c8d249688ca5afd27be69a82eca3
+hydrant @ git+https://github.com/kasra-keshavarz/hydrant.git
 easymore @ git+https://github.com/ShervanGharari/EASYMORE.git@develop_2.0.0
 idna==3.3
 importlib_metadata==4.10.1
@@ -63,7 +63,7 @@ lockfile==0.12.2
 MarkupSafe==2.0.1
 matplotlib==3.5.1
 matplotlib_inline==0.1.6
-meshflow @ git+https://github.com/kasra-keshavarz/meshflow@c56e33f98945d06066082a4701128577b99f5f23
+meshflow @ git+https://github.com/kasra-keshavarz/meshflow
 mistune==0.8.4
 mock==4.0.3
 mpi4py==3.1.3
